--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/server.ts",
     "dev": "nodemon ./src/server.ts",
-    "db-init": "ts-node ./src/sync.ts"
+    "db-init": "ts-node ./src/sync.ts",
+    "build": "npm i && ts-node ./src/sync.ts"
   },
   "repository": {
     "type": "git",
